# pywws

./: .gitignore  .readthedocs.yaml  6hrs.txt  7days.txt  AutoDoc.py  CHANGELOG.txt  CONTRIBUTING.rst  DataStore.py  EWtoPy.py  Hourly.py  LiveLog.py  Localisation.py  LogData.py  MANIFEST.in  Plot.py  Plot_24Hrs.py  Plot_28Days.py  Plot_7Days.py  Process.py  README.md  README.rst  README.txt  Reprocess.py  SetWeatherStation.py  Template.py  TestWeatherStation.py  ToTwitter.py  ToUnderground.py  TwitterAuth.py  USBQualityTest.py  UpgradeFrom0-1.py  UpgradeFrom0-2.py  UpgradeFrom0.1.py  UpgradeFrom0.2.py  Upload.py  WeatherStation.py  WindRose.py  datastore.html  feed_daily.xml  makefile  (+4 more)
.tx/: config
code/: EWtoPy.py  Hourly.py  LiveLog.py  Reprocess.py  RunModule.py  SetWeatherStation.py  TestModule.py  TestWeatherStation.py  TwitterAuth.py  USBQualityTest.py  makefile  setup.py
developer/: README.rst  tag_release.py
doc/: AutoDoc.html  DataStore.html  EWtoPy.html  HOWTO_Twitter.txt  HOWTO_get_started.txt  Hourly.html  Localisation.html  LogData.html  Plot.html  Plot_24Hrs.html  Plot_28Days.html  Plot_7Days.html  Process.html  Reprocess.html  Template.html  TestWeatherStation.html  TimeZone.html  ToTwitter.html  UpgradeFrom0-1.html  UpgradeFrom0-2.html  Upload.html  WeatherStation.html  WindRose.html  ewtopy.html  hourly.html  index.html  index.rst  logdata.html  plot_24hrs.html  plot_28days.html  plot_7days.html  process.html  template.html  testweatherstation.html  upgradefrom01.html  upgradefrom02.html  upload.html  weatherstation.html
doc_src/: Makefile  api_index.rst  conf.py  index.rst
example_graph_templates/: 2008.png.xml  2009.png.xml  24hrs.png.xml  24hrs.xml  24hrs_full_features.png.xml  28days.png.xml  28days.xml  7days.png.xml  7days.xml  Oct_08.png.xml  Oct_08.xml  rose_24hrs.png.xml  rose_7days_nights.png.xml
example_modules/: calib_jim.py
example_templates/: 12months.txt  2010_11.txt  24hrs.txt  6hrs.txt  6hrs_html_cp.txt  7days.txt  allmonths.txt  feed_daily.xml  feed_hourly.xml  forecast_9am.txt  forecast_tweet.txt  forecast_week.txt  tweet.txt  tweet_oth.txt
languages/: compile_language.sh  create_template.sh  en.po  en_GB.po  es.po  fr.po  init_language.sh  nl.po  pywws.pot  sv_SE.po
pywws/: DataStore.py  EWtoPy.py  Forecast.py  Hourly.py  LiveLog.py  Localisation.py  LogData.py  Logger.py  PidFile.py  Plot.py  Process.py  Reprocess.py  SetWeatherStation.py  Tasks.py  Template.py  TestWeatherStation.py  TimeZone.py  ToMetOffice.py  ToTwitter.py  ToUnderground.py  TwitterAuth.py  USBQualityTest.py  Upload.py  WeatherStation.py  WindRose.py  YoWindow.py  ZambrettiCore.py  (+12 more)
(+617 files in other folders)
